# simple-todo

./: README.md
backend/actix-todo/: Cargo.toml
backend/actix-todo/src/: db.rs  dto.rs  main.rs  model.rs  service.rs
backend/gin-todo/: go.mod  go.sum  main.go
backend/gin-todo/todoCRUD/: controller.go  model.go  service.go
backend/nest/: package-lock.json  package.json
backend/nest/src/: app.module.ts
backend/nest/src/todo/: todo.controller.ts  todo.module.ts  todo.service.ts
backend/nest/src/todo/dto/: create-todo.dto.ts  update-todo.dto.ts
backend/nest/src/todo/schemas/: todo.schema.ts
web/: package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx
