[package]
name = "actix-todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-rc.2"
mongodb = { version = "2.0.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.21"
async-trait = "0.1.52"
uuid = { version = "0.8", features = ["serde", "v4"] }